--- a/App/splitreceipt.kv
+++ b/App/splitreceipt.kv
@@ -6,36 +6,79 @@ ScreenManager:
     orientation: 'vertical'
     padding: 10
     spacing: 10
-
+    size: 100, 100
     BoxLayout:
         orientation: 'vertical'
-        
         Button:
             text: "Go to New Screen"
             on_release: app.root.current = "new_screen"
             size_hint: (1, None)
             height: 50
 
-        Label:
-            text: "# of People"
-            font_size: 24
-        TextInput:
-            id: input_people
-            multiline: False
-            font_size: 24
-        
-        Label:
-            text: "# of Items"
-            font_size: 24
-        TextInput:
-            id: input_items
-            multiline: False
-            font_size: 24
+        BoxLayout:
+            id: data_boxlayout
+            orientation: 'horizontal'
+            spacing: 10
+            size_hint_y: 1
+
+            BoxLayout:
+                id: left_boxlayout
+                orientation: 'vertical'
+                spacing: 10
+                size_hint_y: 1
+
+                ScrollView:
+                    do_scroll_y: True
+                    GridLayout:
+                        id: left_boxlayout2
+                        cols: 3
+                        spacing: 10
+                        orientation: 'lr-tb'
+                        size_hint_y: None
+                        height: self.minimum_height
+
+                Button:
+                    text: "Add Item"
+                    on_release: root.add_to_left()
+                    size_hint_y: 0.1
+                Button:
+                    text: "Preset Item"
+                    on_release: root.add_to_left_preset()
+                    size_hint_y: 0.1
+
+
+
+            BoxLayout:
+                id: right_boxlayout
+                orientation: 'vertical'
+                spacing: 10
+                size_hint_y: 1
+                size_hint_x: 0.4
+
+                ScrollView:
+                    do_scroll_y: True
+                    GridLayout:
+                        id: right_boxlayout2
+                        cols: 1
+                        spacing: 10
+                        orientation: 'tb-lr'
+                        size_hint_y: None
+                        height: self.minimum_height
+                Button:
+                    text: "Add Person"
+                    on_release: root.add_to_right()
+                    size_hint_y: 0.1
+                Button:
+                    text: "Delete Person"
+                    size_hint_y: 0.1
+
+
 
 <NewScreen>:
     orientation: 'vertical'
     padding: 10
     spacing: 10
+    
     BoxLayout:
         orientation: 'vertical'
         Button:
@@ -50,7 +93,7 @@ ScreenManager:
             GridLayout:
                 id: table_grid
                 cols: 1
-            
-            
+                size_hint_y: 1
+                size_hint_x: 0.5
 
         
