--- a/App/splitreceipt.kv
+++ b/App/splitreceipt.kv
@@ -39,10 +39,6 @@ ScreenManager:
 
                 Button:
                     text: "Add Item"
-                    on_release: root.add_to_left()
-                    size_hint_y: 0.1
-                Button:
-                    text: "Preset Item"
                     on_release: root.add_to_left_preset()
                     size_hint_y: 0.1
 
@@ -68,9 +64,6 @@ ScreenManager:
                     text: "Add Person"
                     on_release: root.add_to_right()
                     size_hint_y: 0.1
-                Button:
-                    text: "Delete Person"
-                    size_hint_y: 0.1
 
 
 
@@ -89,11 +82,16 @@ ScreenManager:
 
         BoxLayout:
             orientation: 'vertical'
-
-            GridLayout:
-                id: table_grid
-                cols: 1
-                size_hint_y: 1
-                size_hint_x: 0.5
-
+            ScrollView:
+                do_scroll_y: True
+                do_scroll_x: True
+                GridLayout:
+                    id: table_grid
+                    cols: 1
+                    spacing: 10
+                    orientation: 'lr-tb'
+                    size_hint_y: None
+                    size_hint_x: None
+                    height: self.minimum_height
+                    width: self.minimum_width
         
